# ledger-cpp-neblio

./: .gitignore  CMakeLists.txt  README.md  btcTx.json  ledgerIncomingTx.json
doc/: Expected APDUs and Results.md
ledgercpp/: base58.h  base58_2.h  bip32.cpp  bip32.h  comm.h  hid_device.cpp  hid_device.h  ledger.cpp  ledger.h  ledger.onepacket.cpp  main.cpp  transport.cpp  transport.h  utils.cpp  utils.h
